Fixed scrollbar visibility bug on auth page

--- a/client/web/src/app/layouts/auth-layout/auth-layout.component.scss
+++ b/client/web/src/app/layouts/auth-layout/auth-layout.component.scss
@@ -7,7 +7,7 @@
 #auth-content {
   min-width: 375px;
   width: 50%;
-  overflow-y: scroll;
+  overflow-y: auto;
   max-height: 100vh;
 }
 
